# cantica-studio

./: .gitignore  EVENTS.md  FLOW.md  README.md  Taskfile.yml  package-lock.json  package.json
api/: Taskfile.yml  docker-compose.yml  pyproject.toml
api/.cantica-studio/sessions/: actor-1.json
api/src/studio_api/: actor.py  cantica_client.py  config.py  main.py  runtime.py
api/tests/: conftest.py  test_actor.py  test_api_runtime.py  test_code_actor.py  test_coverage_gaps.py  test_main.py  test_mcp_server.py  test_runtime.py  test_workspace_fs.py
clients/shared/: auth-core.ts  cantica-client.ts  platform.ts  studio-client.ts  studioManager.ts
clients/shared/types/: index.ts
clients/shared/webview-src/: App.tsx  edgeUtils.ts  index.tsx  store.ts  style.css  useResolveTimeout.ts  vscode.ts
clients/studio-app/: Taskfile.yml  esbuild.js  package-lock.json  package.json  tsconfig.json  vscode
clients/studio-app/main/: auth-store.ts  key-store.ts  main.ts  platform.ts
clients/studio-app/preload/: preload.ts
clients/studio-app/renderer/: Sidebar.tsx  index.html  index.tsx  vscode-electron.ts
clients/vscode/: .vscodeignore  LICENSE  README.md  Taskfile.yml  esbuild.js  package-lock.json  package.json  tsconfig.json  tsconfig.webview.json  vitest.config.ts  webview-src
clients/vscode/src/: actors-panel.ts  agents-provider.ts  auth.ts  cantica-client.ts  extension.ts  provider-keys.ts  setup-wizard.ts  songbooks-fs-provider.ts  songbooks-provider.ts  studio-client.ts  studio-provider.ts  studioManager.ts
clients/vscode/tests/: setup.ts  store.test.ts  studio-client.test.ts
studio-api/: .gitignore  ARCHITECTURE.md  Dockerfile  README.md  ROADMAP_GROUPS_AUTH.md  Taskfile.yml  docker-compose.yml  pyproject.toml
studio-api/src/cantica_studio_api/: __init__.py  config.py  main.py
studio-api/src/cantica_studio_api/api/: deps.py
studio-api/src/cantica_studio_api/api/v1/: router.py
studio-api/src/cantica_studio_api/api/v1/endpoints/: branches.py  namespaces.py  prompts.py  render.py  templates.py  versions.py
studio-api/src/studio_api/: access.py  actor.py  cantica_client.py  code_actor.py  config.py  main.py  mcp_server.py  runtime.py  security_shim.py  workspace_fs.py
studio-api/src/studio_api/api/v1/: access.py  auth.py  deps.py  directory.py  graph.py  groups.py  prompts.py  provider_models.py  providers.py  resources.py  router.py  runtime.py  users.py
studio-api/src/studio_api/auth/: backends.py  deps.py  flags.py  jwt.py  keyauth.py  ldap_backend.py  local_backend.py  oidc_backend.py  password.py  provision.py
studio-api/src/studio_api/orm/: db.py  migrate.py  models.py  seed.py
studio-api/tests/: conftest.py  test_access.py  test_actor.py  test_api_graph.py  test_api_prompts.py  test_api_resources.py  test_api_runtime.py  test_auth.py  test_cantica_client.py  test_code_actor.py  test_code_actor_ts.py  test_config.py  test_coverage_gaps.py  test_directory.py  test_main.py  test_mcp_server.py  test_opus_cron_self_address.py  test_remote_auth.py  test_runtime.py  test_security_shim.py
vscode/: .vscodeignore  Taskfile.yml  cantica-studio-0.2.1.vsix  cantica-studio.vsix  esbuild.js  eslint.config.mjs  package-lock.json  package.json  tsconfig.json  vitest.config.ts
vscode/src/: actors-panel.ts  agents-panel.ts  agents-provider.ts  extension.ts  servers-provider.ts  songbooks-provider.ts  studio-client.ts  studio-provider.ts  studioManager.ts
vscode/src/types/: index.ts
vscode/tests/: store.test.ts
vscode/tests/components/: ActivityModal.test.tsx  ProviderMenu.test.tsx
vscode/webview-src/: App.tsx  store.ts  style.css
(+50 files in other folders)
