[project]
name = "studio-api"
version = "0.1.0"
description = "AI Actor Studio API — run actor-ai agents with MCP and Cantica prompt integration"
readme = "README.md"
authors = [
    { name = "Olivier Steck", email = "osteck@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "fastmcp>=2.0",
    "actor-ai>=0.3.6",
    "httpx>=0.28",
    "apscheduler>=3.10",
]

[project.scripts]
studio = "studio_api.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/studio_api"]

[tool.uv.sources]
# actor-ai lives three levels up from studio-api/
actor-ai = { path = "../../../actor-ai", editable = true }

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4"]
